# cognitive-scoring

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  brain_state_demo.ipynb  pyproject.toml  tribe_demo.ipynb
.github/: RELEASE.md
.github/workflows/: release.yml
artifacts/: implementation_plan.md  implementation_plan_BrainAPI — A Simple, Comprehensive API for TRIBE v2.md  research_notes.md  second_implementation_plan.md  second_walkthrough.md  task.md  third_implementation_plan.md  walkthrough.md
scripts/: update_demo_notebook.py
stimuli/: calm.txt  curious.txt  fearful.txt  happy.txt  sad.txt
tribev2/: __init__.py  _mps_compat.py  api.py  brain_states.py  config.py  demo_utils.py  eventstransforms.py  launchd.py  main.py  menubar.py  model.py  server.py  settings_gui.py
tribev2/grids/: mac_config.py
wiki/: 00_index.md  01_what_is_tribev2.md  02_architecture.md  03_apple_silicon.md  04_inference_pipeline.md  05_brain_atlas.md  06_brain_states.md  07_ad_project.md  08_file_reference.md  09_how_to_extend.md  10_api_reference.md
