[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-scoring"
version = "1.0.1"
description = "Predict brain activity from text, audio, and video using Meta's TRIBE v2 model"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Meta Platforms, Inc."}]
keywords = [
  "neuroscience",
  "fmri",
  "brain",
  "encoding",
  "multimodal",
  "transformer",
  "deep-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

# Core dependencies: enough to run text-only inference + BrainAPI.
# Video support (torchvision, moviepy) is optional — install cognitive-scoring[video].
dependencies = [
  "neuralset==0.0.2",
  "neuraltrain==0.0.2",
  "torch>=2.5.1,<3",
  "numpy>=2.1,<3",
  "x_transformers==1.27.20",
  "einops",
  "pyyaml",
  "pydantic",
  "pandas",
  "requests",
  "huggingface_hub",
  "gtts",
  "langdetect",
  "spacy",
  "soundfile",
  "Levenshtein",
  "julius",
  "transformers",
  "tqdm",
  "exca",
]

[project.urls]
Homepage = "https://github.com/suncloudsmoon/cognitive-scoring"
Repository = "https://github.com/suncloudsmoon/cognitive-scoring"
Documentation = "https://github.com/suncloudsmoon/cognitive-scoring/tree/main/wiki"

[project.scripts]
tribe-server = "tribev2.server:main"
tribe-menubar = "tribev2.menubar:main"

[project.optional-dependencies]
  # Video/audio-from-video support (torchvision for V-JEPA, moviepy for extraction)
  video = [
    "torchvision>=0.20,<1",
    "moviepy>=2.2.1",
  ]
  # Brain surface visualization (3D heatmaps)
  plotting = [
    "nibabel",
    "matplotlib",
    "seaborn",
    "colorcet",
    "nilearn",
    "scipy",
    "pyvista",
    "scikit-image",
  ]
  # HTTP API server
  server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
  ]
  # Model training
  training = [
    "nibabel",
    "torchmetrics",
    "wandb",
    "lightning",
  ]
  # INT8 quantization for reduced memory
  optimized = [
    "torchao>=0.9,<1",
  ]
  # macOS menu bar app
  menubar = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
  ]
  # Testing
  test = [
    "pytest",
  ]
  # Everything (except training)
  all = [
    "cognitive-scoring[video,plotting,server,optimized,menubar]",
  ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["tribev2*"]

[tool.setuptools.package-data]
tribev2 = ["py.typed", "LICENSE"]
